feature: auth service customer